# tree-sitter-d2

./: .gitignore  Cargo.toml  Makefile  README.md  binding.gyp  flake.nix  grammar.js  package-lock.json  package.json  tree-sitter-d2.wasm
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
dev/: nvim-ts.nix  vimrc.vim
examples/: all.d2  test.txt  twitter.d2
queries/: highlights.scm  injections.scm
scripts/: pre-commit  pre-push
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: attributes.txt  connection.txt  container.txt  shape.txt
test/highlight/: attribute.d2  connection.d2  keyword.d2  shape.d2
